project wokrfolw 및 struct 구성
